--- a/src/estilos.css
+++ b/src/estilos.css
@@ -16,7 +16,6 @@ input {
   padding: 10px 15px;
   width: 100%;
 }
-
 h2 {
   font-size: 1.5rem;
 }
@@ -24,6 +23,13 @@ h2 {
 h3 {
   font-size: 3rem;
   margin-bottom: 5px;
+}
+
+.center{
+  display:flex;
+  justify-content: center;
+  padding: 2rem;
+  
 }
 
 .card-grid {
