--- a/src/estilos.css
+++ b/src/estilos.css
@@ -183,3 +183,50 @@ h3 {
 .form__field:invalid {
   box-shadow: none;
 }
+
+
+
+/* sidebadr */
+
+.root-sidebar {
+  position: fixed;
+  top: 50%; /* Alinea la barra lateral en el centro vertical */
+  left: 0;
+  transform: translateY(-50%);
+  
+  color: #fff;
+  border-radius: 3rem;
+  
+  padding: .5rem; 
+  margin: 0;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+
+.root-sidebar__item {
+  margin-bottom: 10px;
+  margin-left: 1rem;
+  /* padding-left: 1rem; */
+}
+
+.root-sidebar__item-text{
+  margin-left: -100vw;
+  transition: margin-left .1s ease-in-out;
+}
+
+.root-sidebar a {
+  
+  text-decoration: none;
+  
+  transition: color 0.3s;
+  background: rgb(234, 234, 234);
+  
+}
+
+
+.root-sidebar a:hover .root-sidebar__item-text {
+  /* color: #00bcd4; */
+  margin-left: 0rem;
+}
+
