animaciones de entrada para el titulo y los gifs

--- a/src/estilos.css
+++ b/src/estilos.css
@@ -99,13 +99,14 @@ h3 {
 
 .card * {
   margin: 0px;
+  background-color: rgb(0, 0, 0);
 }
 
 .card figcaption {
   display: none;
   position: relative;
   bottom: 0px;
-  background-color: white;
+  background-color: rgb(0, 0, 0);
   flex: 1;
   font-size: 1rem;
   margin-top: 5px;
@@ -124,12 +125,7 @@ h3 {
 }
 
 /* css para el input */
-.form__group {
-  /* position: relative;
-  padding: 15px 0 0;
-  margin-top: 10px;
-  width: 50%; */
-}
+
 
 .form__field {
   font-family: inherit;
