extraemos datos de categorias iniciales a fake para poder obtenerlas mas tarde desde las preferencias del usuario y ademas evitamos el scroll horizontal en root-header

--- a/src/estilos.css
+++ b/src/estilos.css
@@ -17,6 +17,7 @@
   flex-direction: column;
   overflow-y: scroll;
   scroll-behavior: smooth;
+  
 }
 
 .root-header {
@@ -40,6 +41,7 @@
   scroll-behavior: smooth;
   scroll-snap-type: y mandatory;
   overflow-y: scroll;
+  overflow-x: hidden;
   
 }
 
