--- a/src/estilos.css
+++ b/src/estilos.css
@@ -238,8 +238,17 @@ h3 {
   margin-left: 0rem;
 }
 
+.root-sidebar__item:hover{
+  list-style: circle;
+  /* transform: scale(1.8) translateX(5px); */
+}
+
 .button-play{
   cursor: pointer;
   border-radius: 3px;
   padding: 1rem;
+}
+
+.cat-activa{
+  list-style: circle;
 }
